# Appointment_Pro

./: .editorconfig  .flake8  .gitignore  README.md  README.rst  dev.env  docker-compose-dev.yml  manage.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py
local/: settings.dev.py  settings.prod.py
projectsrc/: asgi.py  settings.py  wsgi.py
src/config/settings/: __init__.py  base.py  logging.py
src/config/settings/templates/: settings.dev.py
src/core/utils/: misc.py  settings.py
